Solves collapsing padding issue

--- a/source/stylesheets/05-organisms/_global.scss
+++ b/source/stylesheets/05-organisms/_global.scss
@@ -6,6 +6,9 @@
   @extend %flexboxLayout--headerFooter;
   border-bottom: 1px solid $gray--light;
   margin-bottom: 2em;
+  flex-shrink: 0;
+}
+
 }
 
 // --------------------------------------------
